@@ -9,9 +9,11 @@ propellor (3.1.2) UNRELEASED; urgency=medium
   [ Sean Whitton ]
   * Pass --allow-unrelated-histories to git merge when run with git 2.9 or
     newer. This fixes the /usr/bin/propellor wrapper with this version of git.
+  * Don't force Sbuild.keygen{Insecurely,}Generated.
+    Only required with sbuild << 0.70.0
   * Update Sbuild.hs haddock for sbuild 0.71.0
-  * Add instructions to Sbuild.hs haddock for customising the chroot
-    with propellor.
+  * Add instructions to Sbuild.hs haddock for customising the chroot with
+    propellor.
   * Don't add deb-src lines when creating sbuild chroots.
     Speeds up updating the chroot with sbuild-update.
 
